toilet-feedback: add sms service(test)
