# toilet-feedback/models/dataModel.go
@@ -1,5 +1,7 @@
 package models
 
+import "time"
+
 // oracledb@odrh_del(table@mmh)
 type FeedBackFormat struct {
 	PlaceCode string `json:"placeCode" binding:"required" xorm:"char(7) notnull"`
@@ -15,4 +17,13 @@ type FeedBackFormat struct {
 	Bn_Cout5  string `json:"bn_Cout5"  xorm:"char(20) notnull"`
 	Bn_Cout6  string `json:"bn_Cout6"  xorm:"char(20) notnull"`
 	Bn_Cout7  string `json:"bn_Cout7"  xorm:"varchar2(100) notnull"`
+}
+
+type SMSData struct {
+	Kind    string    `json:"kind" xorm:"varchar2(30)"`
+	Phsno   string    `json:"phsno" binding:"required" xorm:"varchar2(10) notnull"`
+	Message string    `json:"message" binding:"required" xorm:"varchar2(500) notnull"`
+	Status  string    `json:"status" binding":"required" xorm:"varchar2(2) notnull"`
+	Oper    string    `json:"oper" binding:"required" xorm:"varchar2(4) notnull"`
+	Udate   time.Time `json:"udate" binding:"required" xorm:"date notnull"`
 }
